Fix non-scrolling issue (bcs of overflow hidden)

--- a/css/style.css
+++ b/css/style.css
@@ -20,10 +20,11 @@
 }
 
 body {
+  min-height: 100vh;
   background-color: #e1ebee;
   font-family: 'Open Sans', sans-serif;
   line-height: 1.6;
-  overflow-y: hidden;
+  /* overflow-y: hidden; */
 }
 
 /* index page cover photo */
@@ -33,6 +34,7 @@ header.main {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  overflow-y: hidden;
 }
 
 /* nav bar for all pages */
@@ -107,14 +109,6 @@ a.nav-item:hover {
 
 .hidden {
   display: none;
-}
-
-/* TODO */
-.card:hover {
-  /* background-color: #2d503f;
-  opacity: 0.7;
-  transition: 1000ms ease-in-out;
-  box-shadow: 0px 0px 2px 2px #2d503f; */
 }
 
 .profile-image {
